--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
+  build:
+    if: success() || failure()
     name: Build app for ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
@@ -39,7 +40,7 @@ jobs:
         
     - name: Build app
       run: |
-        pyinstaller main.spec
+        python -c "import PyInstaller.__main__; PyInstaller.__main__.run(['main.spec'])"
         
     - name: Package it
       run: |
