--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,6 @@ jobs:
     - name: Upload build
       uses: actions/upload-artifact@v4
       with:
-        name: app-${{ matrix.os }}
+        name: app-${{ matrix.os }}.${{ matrix.format }}
         path: app-${{ matrix.os }}.${{ matrix.format }}
         
