--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,4 +57,5 @@ jobs:
         files: |
           totp-pyqt6-${{ matrix.os }}.${{ matrix.format }}
           LICENSE
+        tag_name: ${{ github.sha }}
         
