--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,4 +58,5 @@ jobs:
           totp-pyqt6-${{ matrix.os }}.${{ matrix.format }}
           LICENSE
         tag_name: ${{ github.sha }}
+        token: ${{ secrets.GITHUB_TOKEN }}
         
