--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,25 +24,84 @@ jobs:
             os: windows-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
+    - name: Get commit SHA
+      run: |
+        COMMIT_SHA=$(git rev-parse HEAD)
+        echo "COMMIT_SHA=$COMMIT_SHA" >> $GITHUB_ENV
+
+    - name: Restore from cache
+      uses: actions/cache/restore@v4
+      id: restore
+      with:
+        path: dist
+        key: ${{ matrix.os }}-${{ env.COMMIT_SHA }}
+    
     - uses: actions/setup-python@v5
+      if: steps.restore.outputs.cache-hit != 'true'
       with:
         python-version: 3.x
 
     - name: Install dependencies
+      if: steps.cache.outputs.cache-hit != 'true'
       run: |
         python -m pip install -r requirements.txt
         
     - name: Install pyinstaller
+      if: steps.restore.outputs.cache-hit != 'true'
       run: |
         python -m pip install pyinstaller
         
     - name: Build app
+      if: steps.restore.outputs.cache-hit != 'true'
       run: |
         python -c "import PyInstaller.__main__; PyInstaller.__main__.run(['main.spec'])"
+
+    - name: Save to cache
+      if: steps.restore.outputs.cache-hit != 'true'
+      uses: actions/cache/save@v4
+      id: save
+      with:
+        path: dist
+        key: ${{ matrix.os }}-${{ env.COMMIT_SHA }}
 
     - name: Upload build
       uses: actions/upload-artifact@v4
       with:
         name: totp-pyqt6-${{ matrix.os }}
         path: dist/main/
+          
+  release:
+    name: Create Release
+    runs-on: ubuntu-latest
+    needs:
+      - build
+
+    steps:
+    - uses: actions/checkout@v5
+    - name: Get commit SHA
+      run: |
+        COMMIT_SHA=$(git rev-parse HEAD)
+        echo "COMMIT_SHA=$COMMIT_SHA" >> $GITHUB_ENV
+        
+    - name: Download Executables
+      uses: actions/download-artifact@v4
+      with:
+        path: artifacts
+
+    - name: Zip Executables
+      run: |
+        pushd "./artifacts"
+        for dir in ./*/; do
+          dir_name=$(basename "$dir");
+          zip_file="./$dir_name.zip";
+          zip -r "$zip_file" "$dir_name";
+        done
+        popd          
+        
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      with:
+        body: New release!
+        files: artifacts/*.zip
+        tag_body: ${{ env.COMMIT_SHA }}
