--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,18 +10,6 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
         include:
-          - format: tgz
-            os: macOS-latest
-          - archive: tar -czf
-            os: macOS-latest
-          - format: tar.gz
-            os: ubuntu-latest
-          - archive: tar -czf
-            os: ubuntu-latest
-          - format: zip
-            os: windows-latest
-          - archive: tar.exe acf
-            os: windows-latest
 
     steps:
     - uses: actions/checkout@v5
@@ -89,19 +77,42 @@ jobs:
       with:
         path: artifacts
 
-    - name: Zip Executables
+          - format: tgz
+            os: macOS-latest
+          - archive: tar -czf
+            os: macOS-latest
+          - format: tar.gz
+            os: ubuntu-latest
+          - archive: tar -czf
+            os: ubuntu-latest
+          - format: zip
+            os: windows-latest
+          - archive: tar.exe acf
+            os: windows-latest
+            
+    - name: .zip windows:
       run: |
         pushd "./artifacts"
-        for dir in ./*/; do
-          dir_name=$(basename "$dir");
-          zip_file="./$dir_name.zip";
-          zip -r "$zip_file" "$dir_name";
-        done
-        popd          
+        zip -r ./totp-pyqt6-windows-latest.zip ./totp-pyqt6-windows-latest/
+        popd
+    
+    - name: .tar.gz linux:
+      run: |
+        pushd "./artifacts"
+        tar -czvf ./totp-pyqt6-ubuntu-latest.tar.gz -C ./totp-pyqt6-ubuntu-latest/ .
+        popd
+    
+    - name: .tar.gz macOS:
+      run: |
+        pushd "./artifacts"
+        tar -czvf ./totp-pyqt6-macOS-latest.tar.gz -C ./totp-pyqt6-macOS-latest/ .
+        popd
         
     - name: Release
       uses: softprops/action-gh-release@v1
       with:
-        body: New release!
-        files: artifacts/*.zip
-        tag_body: ${{ env.COMMIT_SHA }}
+        body: Automatic release.
+        files: |
+          artifacts/*.zip
+          artifacts/*.tar.gz
+        tag_name: ${{ env.COMMIT_SHA }}
