--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,8 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
+    permissions:
+      contents: read
 
     steps:
     - uses: actions/checkout@v5
@@ -63,6 +65,8 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build
+    permissions:
+      contents: read, write
 
     steps:
     - uses: actions/checkout@v5
