--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,9 @@ jobs:
     needs:
       - build
     permissions:
-      contents: read, write
+      contents: |
+        read
+        write
 
     steps:
     - uses: actions/checkout@v5
