--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,11 @@ on:
           patch - no features, better stability
         required: true
         default: "v1.0.0"
+      release:
+        description: |
+          true or false
+        required: true
+        default: "true"
 
 jobs:
   build:
@@ -76,6 +81,7 @@ jobs:
       - build
     permissions:
       contents: write
+    if: ${{ github.event.inputs.release }}
 
     steps:
     - uses: actions/checkout@v5
