--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ on:
           true or false
         required: true
         default: "true"
+        type: boolean
 
 jobs:
   build:
@@ -81,7 +82,7 @@ jobs:
       - build
     permissions:
       contents: write
-    if: ${{ github.event.inputs.release }}
+    if: ${{ github.event.inputs.release == 'true' }}
 
     steps:
     - uses: actions/checkout@v5
